# antibody-developability-abmelt

./: .gitignore  .pre-commit-config.yaml  ACTIVE_ISSUES.md  Makefile  README.md  log.txt  pyproject.toml
.github/workflows/: ci.yml
AbMelt/src/: preprocess.py
_AbMelt_reference/src/: preprocess.py
abmelt_infer_pipeline/: CLEANUP_GUIDE.md  CORRECTED_MISSING_FEATURES.md  Dockerfile  README.md  config.yaml  demo_structure_generation.py  feature_names.txt  infer.py  infer_using_descriptors.py  run_tests.py  simple_structure_test.py  test_structure_generation.py
abmelt_infer_pipeline/configs/: paper_config.yaml  testing_config.yaml
abmelt_infer_pipeline/envs/abmelt_md_simulation_env/: README.md  linux_cuda_machine_setup.md  linux_cuda_machine_setup.sh  linux_cuda_machine_setup_1.sh  linux_cuda_machine_setup_2.sh  mac_env_setup.md  pyproject.toml
abmelt_infer_pipeline/envs/abmelt_sklearn_model_infer_env/: mac_env_setup.md  pyproject.toml
abmelt_infer_pipeline/mdp/: npt_400.mdp  nvt_350.mdp  nvt_400.mdp
abmelt_infer_pipeline/models/: README.md
abmelt_infer_pipeline/run_data/results/: predictions_summary.csv
abmelt_infer_pipeline/run_data/run_2/temp/: #aver.xvg.1#  #aver.xvg.10#  #aver.xvg.11#  #aver.xvg.12#  #aver.xvg.13#  #aver.xvg.14#  #aver.xvg.15#  #aver.xvg.16#  #aver.xvg.17#  #aver.xvg.18#  #aver.xvg.19#  #aver.xvg.2#  #aver.xvg.20#  #aver.xvg.21#  #aver.xvg.23#  #aver.xvg.24#  #aver.xvg.25#  #aver.xvg.26#  #aver.xvg.27#  #aver.xvg.28#  #aver.xvg.29#  #aver.xvg.30#  #aver.xvg.32#  #aver.xvg.33#  #aver.xvg.34#  #aver.xvg.35#  #aver.xvg.36#  #aver.xvg.4#  #aver.xvg.5#  #aver.xvg.6#  #aver.xvg.7#  #aver.xvg.8#  #avg_covar350.pdb.8#  #avg_covar400.pdb.1#  #bonds_300.xvg.10#  #bonds_300.xvg.11#  #bonds_300.xvg.13#  #bonds_300.xvg.2#  #bonds_300.xvg.3#  #bonds_300.xvg.4#  (+1736 more)
abmelt_infer_pipeline/src/: REQUIRED_FILES.md  cleanup_temp_files.py  compute_descriptors.py  md_simulation.py  model_inference.py  order_param.py  preprocess.py  res_sasa.py  structure_prep.py
abmelt_infer_pipeline/tests/: quick_test.py  run_tests.py  simple_structure_test.py  test_structure_generation.py
docs/: MODERN_DEVEX_SETUP.md  PROJECT_CONTEXT_AND_INTENT.md  README.md  paper_validation_report.md
docs/specs/: 000-meta-map.md  001-pipeline-refactor-plan.md  002-pipeline-audit-current-state.md  003-cleanup-plan.md
