[project]
name = "abmelt-infer-pipeline"
version = "0.1.0"
description = "Inference pipeline wrapper for AbMelt antibody developability models"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.0.0",
    "immunebuilder>=1.2",
    "pyyaml>=6.0",
    "gromacswrapper>=0.9.2",
    "propka>=3.5.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
    "numpy>=1.23.0",
    "mdanalysis>=2.6.0",
    "scikit-learn==1.2.0",
    "freesasa>=2.2.0",
    "mdtraj>=1.9.9",
    "biopython>=1.79",
]
authors = [
    { name = "Praful932", email = "praful.mohanan@gmail.com" }
]
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.0"
mypy = ">=1.0.0"
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-xdist = ">=3.0.0"
pytest-sugar = ">=0.9.0"
types-PyYAML = "*"
types-requests = "*"

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["abmelt_infer_pipeline/src", "abmelt_infer_pipeline/tests"]
extend-exclude = [
    "AbMelt/**",
    "reference_repos/**",
    "burner_docs/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# MyPy configuration - strict
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
exclude = [
    "AbMelt/.*",
    "reference_repos/.*",
    "burner_docs/.*",
]

[[tool.mypy.overrides]]
module = "abmelt_infer_pipeline.tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "AbMelt.*",
    "gromacs.*",
    "Bio.*",
    "MDAnalysis.*",
    "joblib.*",
    "ImmuneBuilder.*",
    "preprocess.*",
    "order_param.*",
    "res_sasa.*",
    "structure.*",
    "anarci.*",
    "simtk.*",
    "mdtraj.*",
    "pandas.*",
    "numpy.*",
    "freesasa.*",
    "scikit-learn.*",
    "sklearn.*"
]
ignore_missing_imports = true
ignore_errors = true


# Pytest configuration
[tool.pytest.ini_options]
pythonpath = "abmelt_infer_pipeline/src"
testpaths = ["abmelt_infer_pipeline/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=abmelt_infer_pipeline/src",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["abmelt_infer_pipeline/src"]
omit = [
    "abmelt_infer_pipeline/tests/*",
    "*/test_*.py",
    "AbMelt/*",
    "reference_repos/*",
    "burner_docs/*",
]
